# netaichi_checking_availability

./: .env  config.py  interface.py  main.py  pyproject.toml  settings.py
browser/: __init__.py  _options.py  chrome.py  constants.py  deco.py  decorator.py  errors.py
database/: __init__.py  models.py  operations.py
interfaces/: __init__.py  account.py  entry.py  lotteryentry.py  lotterystatus.py
netaichi/: __init__.py  error.py  error_handler.py  module_base.py  site.py
netaichi/courts/: __init__.py  base.py  manager.py  netaichi.py
netaichi/modules/: __init__.py  _go_status.py  _page_status.py  auth.py  error.py  fetcher.py  go.py  select.py
utils/: __init__.py  date.py  file.py  log.py
