[tool.poetry]
name = "netaichi-checking-availability"
version = "0.1.0"
description = ""
authors = ["oguriwork <oguri.ncv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.35.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
