[tool.poetry]
name = "netaichi-checking-availability"
version = "0.1.0"
description = ""
authors = ["oguriwork <oguri.ncv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.35.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
anti-useragent = "^1.0.10"
python-dateutil = "^2.9.0.post0"
types-python-dateutil = "^2.9.0.20250822"
sqlmodel = "^0.0.24"
types-beautifulsoup4 = "^4.12.0.20250516"
beautifulsoup4 = "^4.13.5"
lxml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
types-python-dateutil = "^2.9.0.20250822"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
